[project]
name = "conc-5011-python-project-repository-setup"
version = "0.1.0"
description = ""
authors = [
    {name = "gracious7",email = "princetripathi093@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
